tests/algorithms/x/Pascal/dynamic_programming/viterbi.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/dynamic_programming/viterbi.pas
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Real>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,Main.TFPGMap<System.ShortString,System.Real>>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
fgl.pp(1668,8) Note: Call to subroutine "function TFPGMap<System.ShortString,System.Variant>.IndexOf(const AKey:ShortString):LongInt;" marked as inline is not inlined
viterbi.pas(64,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Real>.AddOrSetData(const AKey:ShortString;const AData:Real);" marked as inline is not inlined
viterbi.pas(64,45) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
viterbi.pas(64,45) Note: Call to subroutine "operator :=(const source:Single):Variant;" marked as inline is not inlined
viterbi.pas(65,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Real>.AddOrSetData(const AKey:ShortString;const AData:Real);" marked as inline is not inlined
viterbi.pas(65,43) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
viterbi.pas(65,43) Note: Call to subroutine "operator :=(const source:Extended):Variant;" marked as inline is not inlined
viterbi.pas(66,3) Note: Call to subroutine "procedure TFPGMap<System.ShortString,System.Real>.AddOrSetData(const AKey:ShortString;const AData:Real);" marked as inline is not inlined
viterbi.pas(66,44) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
viterbi.pas(66,44) Note: Call to subroutine "operator :=(const source:Extended):Variant;" marked as inline is not inlined
viterbi.pas(71,34) Error: Illegal type conversion: "TFPGMap$2$crc826E589E" to "Variant"
viterbi.pas(72,32) Error: Illegal type conversion: "TFPGMap$2$crc826E589E" to "Variant"
viterbi.pas(141,37) Error: Incompatible types: got "Real" expected "LongInt"
viterbi.pas(145,80) Error: Incompatible types: got "Real" expected "LongInt"
viterbi.pas(172,32) Error: Incompatible types: got "Real" expected "LongInt"
viterbi.pas(189,31) Error: Incompatible types: got "ShortString" expected "LongInt"
viterbi.pas(193,36) Error: Incompatible types: got "LongInt" expected "ShortString"
viterbi.pas(221,14) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "TFPGMap<System.ShortString,Main.TFPGMap<System.ShortString,System.Real>>"
viterbi.pas(222,13) Error: Incompatible types: got "TFPGMap<System.ShortString,System.Variant>" expected "TFPGMap<System.ShortString,Main.TFPGMap<System.ShortString,System.Real>>"
viterbi.pas(233) Fatal: There were 9 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
